<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:icon="@drawable/ic_library"
            android:id="@+id/notebookListFragment"
            android:title="@string/navigation_library"/>

    <item
            android:icon="@drawable/ic_group_black_24dp"
            android:id="@+id/sharingHubFragment"
            android:title="@string/navigation_sharing_hub"/>

    <item
            android:icon="@drawable/ic_challenges"
            android:id="@+id/challengesFragment"
          android:title="@string/navigation_challenges"/>

    <item
            android:icon="@drawable/ic_person"
            android:id="@+id/profileFragment"
            android:title="@string/navigation_profile"/>
</menu>