<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="cz.levinzonr.studypad.presentation.screens.about.feedback.SendFeedbackFragment">

    <TextView
            android:layout_margin="@dimen/space_big"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_feedback_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView11"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout"
            app:layout_constraintTop_toBottomOf="@id/textView11"
            android:layout_margin="@dimen/space_big"
            android:layout_width="match_parent"
            android:hint="@string/about_feedback_hint"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textMultiLine"
                android:id="@+id/feedbackEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/feedbackSendBtn"
            style="@style/Button.Primary"
            app:icon="@drawable/ic_send_black_24dp"
            app:iconGravity="textStart"
            android:layout_margin="@dimen/space_big"
            app:layout_constraintTop_toBottomOf="@id/layout"
            android:text="@string/default_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
