<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent"
        tools:context="cz.levinzonr.studypad.presentation.screens.challenges.write.WriteChallengeFragment">

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:hint="@string/challenge_write_hint"
            android:layout_marginStart="@dimen/space_big"
            android:layout_marginBottom="@dimen/space_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submitAnswerButton">


        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:text="@string/default_submit"
            style="@style/Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            android:id="@+id/submitAnswerButton"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            android:layout_marginEnd="@dimen/space_normal"/>


    <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/skipButton"
            android:text="@string/default_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
