<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="@dimen/space_normal"
        style="@style/Flashcard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <ImageView
                android:padding="@dimen/space_large"
                android:background="@drawable/background_circle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_done_all_black_24dp"
                android:layout_marginBottom="@dimen/space_large"
                android:id="@+id/imageView"
                android:tint="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/challengeCompleteTv"/>

        <TextView
                android:text="@string/challenge_completed_flashcards_title"
                android:layout_margin="@dimen/space_large"
                android:textSize="23sp"
                style="@style/TextStyle.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/challengeCompleteTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:text="3 notes studied"
                style="@style/TextStyle.Header"
                android:textStyle="normal"
                android:layout_margin="@dimen/space_normal"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/challengeCompleteStatTv"
                app:layout_constraintTop_toBottomOf="@+id/challengeCompleteTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
                style="@style/Button.Primary"
                android:text="@string/challenge_completed_start_again"
                app:iconGravity="textStart"
                app:icon="@drawable/ic_refresh_black_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_large"
                android:id="@+id/challengeCompleteRepeatBtn"
                app:layout_constraintTop_toBottomOf="@+id/challengeCompleteStatTv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/challengeCompleteExitBtn"
                style="@style/Button.Text"
                android:text="@string/default_exit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/challengeCompleteRepeatBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>